unpackaged/main/default/objects/Competitor_Differentiation_Assessment__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Differentiation Assessments</relationshipLabel>
    <relationshipName>Competitor_Differentiation_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>