unpackaged/main/default/objects/Competitor_Differentiation_Assessment__c/fields/Competitor_Price_per_MW__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price_per_MW__c</fullName>
    <label>Competitor Price per MW</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>